Implementacion de imagen y modificacion de codigo

--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
 </head>
 
 <body>
-    <div class="cancha"></div>
-    <div class="borde_cancha"></div>
-    <div class="rectangulo1"></div>
-    <div class="rectangulo2"></div>
-    <div class="circulo"></div>
-    <div class="pelota1">
-        <img src="tennis.png">
-    </div>
-    <div class="pelota2">
-        <img src="tennis.png"></div>
-    <div class="pelota3">
-            <img src="tennis.png"></div>
+    <section class="cancha">
+        <div class="borde_cancha">
+            <div class="rectangulo1"></div>
+            <div class="rectangulo2"></div>
+            <div class="circulo"></div>
+             <div class="pelota1">
+                <img src="soccer.png">
+            </div>
+            <div class="pelota2">
+                <img src="soccer.png">
+            </div>
+            
+            <div class="pelota3">
+                <img src="soccer.png">
+            </div> 
+        </div>
+    </section>
 </body>
 
 </html>
